// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TRenderEngine > buildTTree method given a HTML document, should return an instance of TDocument which has one TBlock(body) child 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TEmpty tagName="head" styles={{ whiteSpace: "normal" }} />
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TText tagName="span" data="Hello world!" styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should handle html snippets 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should handle html snippets with multiple root nodes 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
     <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should handle special case when baseStyle.fontSize is not a number 1`] = `
<TDocument tagName="html" styles={{ fontSize: 14, whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ fontSize: 14, whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ fontSize: 14, whiteSpace: "normal" }}>
       <TText tagName="span" data="A" styles={{ fontSize: 14, whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should handle the case where the root element is a body element 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should have its children inherit from UA styles when enableUserAgentStyles is enabled should work with em tags 1`] = `
<TDocument tagName="html" styles={{ fontSize: 14, whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ fontSize: 14, whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ fontSize: 14, whiteSpace: "normal" }}>
       <TText tagName="em" data="This should be italic" styles={{ fontSize: 14, fontStyle: "italic", whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should have its children inherit from baseStyles when provided a full html page markup 1`] = `
<TDocument tagName="html" styles={{ fontSize: 12, whiteSpace: "normal" }}>
   <TEmpty tagName="head" styles={{ fontSize: 12, whiteSpace: "normal" }} />
   <TBlock tagName="body" styles={{ fontSize: 12, whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ fontSize: 12, whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ fontSize: 12, whiteSpace: "normal" }}>
         <TText anonymous data="This text should inherit baseStyles" styles={{ fontSize: 12, whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should have its children inherit from baseStyles when provided a html snippet 1`] = `
<TDocument tagName="html" styles={{ fontSize: 12, whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ fontSize: 12, whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ fontSize: 12, whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ fontSize: 12, whiteSpace: "normal" }}>
         <TText anonymous data="This text should inherit baseStyles" styles={{ fontSize: 12, whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should not provide a root fontSize when enableUserAgentStyles is set to false 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TText tagName="span" data="A" styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should retain own baseStyles when provided a html snippet 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal", marginTop: 10 }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should still parse inline CSS styles when enableUserAgentStyles is set to false 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="div" styles={{ whiteSpace: "normal", paddingTop: 1 }} />
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should support alterDOMParams 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TText tagName="em" data="hey" styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should support disabling hoisting 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing tagName="a" href="https://domain.com" styles={{ whiteSpace: "normal" }}>
       <TText anonymous data="This is " styles={{ whiteSpace: "normal" }} />
       <TText tagName="span" data="phrasing content" styles={{ whiteSpace: "normal" }} />
       <TText anonymous data=" " styles={{ whiteSpace: "normal" }} />
       <TBlock tagName="img" src="https://domain.com/logo.jpg" styles={{ whiteSpace: "normal" }} />
       <TText anonymous data=" and this is " styles={{ whiteSpace: "normal" }} />
       <TText tagName="strong" data="too" styles={{ whiteSpace: "normal" }} />
       <TText anonymous data="." styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > buildTTree method should support disabling whitespace collapsing 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="a" href="https://domain.com" styles={{ whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
         <TText anonymous data="\\nThis is\\n" styles={{ whiteSpace: "normal" }} />
         <TText tagName="span" data="phrasing content" styles={{ whiteSpace: "normal" }} />
         <TText anonymous data="\\n" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
       <TBlock tagName="img" src="https://domain.com/logo.jpg" styles={{ whiteSpace: "normal" }} />
       <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
         <TText anonymous data="\\n    and this is " styles={{ whiteSpace: "normal" }} />
         <TText tagName="strong" data="too" styles={{ whiteSpace: "normal" }} />
         <TText anonymous data=".\\n" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to change a model type to block 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="em" styles={{ whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
         <TText anonymous data="This should be a block!" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to make an untranslatable element translatable 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="button" styles={{ whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
         <TText anonymous data="Hello" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to register custom block tags 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="customtag" styles={{ whiteSpace: "normal" }}>
       <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
         <TText anonymous data="This should be a block!" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to register custom mixed tags should handle mixed tags surrounding blocks like blocks 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TBlock tagName="customtag" styles={{ whiteSpace: "normal" }}>
       <TBlock tagName="div" styles={{ whiteSpace: "normal" }} />
     </TBlock>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to register custom mixed tags should translate mixed tags inside phrasing with text children to TText 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TPhrasing tagName="span" styles={{ whiteSpace: "normal" }}>
         <TText tagName="customtag" data="hi!" styles={{ whiteSpace: "normal" }} />
       </TPhrasing>
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to register custom textual tags should preserve tag when isOpaque is set to true. 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TText tagName="customtag" data="" styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;

exports[`TRenderEngine > customizeHTMLModels option should allow to register custom textual tags should translate to TText 1`] = `
<TDocument tagName="html" styles={{ whiteSpace: "normal" }}>
   <TBlock tagName="body" styles={{ whiteSpace: "normal" }}>
     <TPhrasing anonymous styles={{ whiteSpace: "normal" }}>
       <TText tagName="customtag" data="This should be a text!" styles={{ whiteSpace: "normal" }} />
     </TPhrasing>
   </TBlock>
</TDocument>

`;
